Changelog
=========


2.0.2 (unreleased)
------------------

- Cleanup: remove old plonegov.pdflatex stuff, all views are rewritten with ftw.pdfgenerator.
  [jone]

- Dossier details PDF: remplement with ftw.pdfgenerator.
  [jone]

- Dossier listing PDF: Update layout and date according to definitions in ticket.
  Issue #1173 Feedback aus Pilotphase: Vorlage "Dossierverzeichnis" ueberarbeiten
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1173
  [jone]

- Dossier listing PDF: reimplement with ftw.pdfgenerator.
  [jone]

- Task listing PDF: use containing_dossier.
  [jone]

- Task listing PDF: updated layout and columns.
  Issue #1331 Anpassung am PDF-Aufgabenverzeichnis
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1331/
  [jone]

- Reimplement task listing PDF with ftw.pdfgenerator.
  [jone]

- Dossier cover PDF: various changes and layout optimizations.
  Issue #1332 Deckblatt PDF: Label Anzeige auch wenn keine Ablage Nummer definiert
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1332/
  [jone]

- Dossier cover PDF: reimplement using ftw.pdfgenerator.
  [jone]

- Dossier cover PDF: also show label "filing" when no filing prefix is defined.
  Issue #1332 Deckblatt PDF: Label Anzeige auch wenn keine Ablage Nummer definiert
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1332/
  [jone]


2.0.1 (2011-11-29)
------------------

- Fix issuer client in task listing PDF.
  Issue #1174 Feedback aus Pilotphase: Vorlage "Aufgabenverzeichnis" ueberarbeiten
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1174
  [jone]


2.0 (2011-11-17)
----------------

- Made get_dossier_sequence_number_and_title method safer:
  added fallback for sqlalchemy objects without a breadcrumb_title
  [phgross]

- Added new latex template for the tasklisting including features:landscape format, dossier title, customzations